appId: com.saucelabs.mydemoapp.rn
---
- launchApp
- tapOn: "open menu"
- tapOn: "menu item log in"
- tapOn: "Username input field"
- hideKeyboard
- inputText: "abcdefrg@example.com"
- tapOn: "Password input field"
- inputText: "10203040"
- hideKeyboard
- assertVisible: Login button
- tapOn: Login button
- assertVisible: Products
